--- a/index.html
+++ b/index.html
@@ -1,14 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
 </head>
+
 <body>
-    
+
+    <div class="container">
+
+    <div class="row">
+
+    <div class="col-8">
+    <div class="card-group" id="myaccordian">
+        <div class="panel panel-primary">
+            <div class="panel-heading">
+                <h3 class="panel-title" data-target="#panel-1" data-toggle="collapse" data-parent="#myaccordian">First Portfolio</h3>
+            </div>
+            <div class="panel-collapse collapse" id="panel-1">
+                <div class="panel-body">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum amet provident modi corporis
+                        veniam labore reiciendis vel deserunt ipsam maiores error velit id, quos, a repudiandae dolore.
+                        Officiis, omnis magnam.</p>
+                </div>
+            </div>
+        </div>
+        <div class="panel panel-primary">
+            <div class="panel-heading">
+                <h3 class="panel-title" data-target="#panel-2" data-toggle="collapse" data-parent="#myaccordian">Second Assignment</h3>
+            </div>
+            <div class="panel-collapse collapse" id="panel-2">
+                <div class="panel-body">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum amet provident modi corporis
+                        veniam labore reiciendis vel deserunt ipsam maiores error velit id, quos, a repudiandae dolore.
+                        Officiis, omnis magnam.</p>
+                </div>
+            </div>
+        </div>
+        <div class="panel panel-primary">
+            <div class="panel-heading">
+                <h3 class="panel-title" data-target="#panel-3" data-toggle="collapse" data-parent="#myaccordian">Third Assignment</h3>
+            </div>
+            <div class="panel-collapse collapse" id="panel-3">
+                <div class="panel-body">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum amet provident modi corporis
+                        veniam labore reiciendis vel deserunt ipsam maiores error velit id, quos, a repudiandae dolore.
+                        Officiis, omnis magnam.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    </div>
+    </div>
+    </div>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
