--- a/contact.html
+++ b/contact.html
@@ -1,19 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Contact Me</title>
+  <title>Portfolio</title>
+  <link href="https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Cormorant+Infant&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+  <link href="./assets/css/portfolio.css" rel="stylesheet">
+  <link rel="icon" href="assets/images/rocketship.ico">
 </head>
+
 <body>
-  <div id="contact">
-    <h3>Linked In:</h3>
-    <a href="addressOfLinkedIn"></a>
-    <h3>Email Me:</h3>
-    <p><a href="mailto:johnhenryweber@gmail.com?Subject=John%20Henry%20Weber:%20Web%20Developer" target="_top">johnhenryweber@gmail.com</a></p>
-    <h3>Call Me:</h3>
-    <p><a href="tel:1-541-359-5362">541-359-5362</a></p>
+  <div class="main-container">
+    <header class="inner-header">
+      <div class="name">
+        <h3 id="page-title"><b>John Henry Weber</b></h3>
+      </div>
+      <div class="nav">
+        <h3><b><a href="./index.html">About</a> | <a href="./portfolio.html">Portfolio</a> | <a
+            href="./contact.html">Contact</a></b></h3>
+      </div>
+    </header>
   </div>
+
+    <div class="header"></div>
+  <div class="main-container">
+  <div id="contact">
+    <h3><b>Linked In:</b></h3>
+    <a href="addressOfLinkedIn"><img src="./assets/images/linkedin.png" id="linkedinLogo"></a>
+    <h3><b>GitHub:</b></h3>
+    <a href="addressOfLinkedIn"><img src="./assets/images/octocat.png" id="githubLogo"></a>
+    <h3><b>Email Me:</b></h3>
+    <p><h3><a href="mailto:johnhenryweber@gmail.com?Subject=John%20Henry%20Weber:%20Web%20Developer" target="_top">johnhenryweber@gmail.com</a></p>
+    <h3><b>Call Me:</b></h3>
+    <p><h3><a href="tel:1-541-359-5362">541-359-5362</a></p>
+  </div>
+</div>
+<br />
+<br />
+<div class="footer">
+    <div class="inner-header">
+        <div class="nav">
+            &#169; John Henry Weber, 2019
+        </div>
+    </div>
+</div>
 </body>
 </html>
