--- a/index.html
+++ b/index.html
@@ -2,50 +2,53 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <title>About Me</title>
-  <link href="https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Cormorant+Infant&display=swap" rel="stylesheet">
-  <link href="assets/css/about-stylesheet.css" rel="stylesheet">
-  <link rel="icon" href="assets/images/rocketship.ico">
+    <meta charset="UTF-8">
+    <title>About Me</title>
+    <link href="https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cormorant+Infant&display=swap" rel="stylesheet">
+    <link href="./assets/css/index.css" rel="stylesheet">
+    <link rel="icon" href="./assets/images/rocketship.ico">
 </head>
 
 <body>
     <div class="main-container">
-      <header class="inner-header">
-        <div class="name">
-          <h2 id="page-title">John Henry Weber</h2>
-        </div>
-        <div class="nav">
-            <h2><a href="index.html">About</a> | <a href="portfolio.html">Portfolio</a> | <a href="contact.html">Contact</a></h2>
-        </div>
-      </header>
+        <header class="inner-header">
+            <div class="name">
+                <h2 id="page-title">John Henry Weber</h2>
+            </div>
+            <div class="nav">
+                <h2><a href="index.html">About</a> | <a href="./portfolio.html">Portfolio</a> | <a
+                        href="contact.html">Contact</a></h2>
+            </div>
+        </header>
+        <br />
 
-      <div class="header"></div>
-      <div class="total-content">
-        <div class="title">
-          <h1>About Me</h1>
-        </div>
-        <img class="img-circle" src="assets/images/henry.jpg" alt="Picture of John Henry Weber">
+        <div class="header"></div>
+        <div class="total-content">
+            <div class="title">
+                <h1>About Me</h1>
+            </div>
+            <img class="img-circle" src="./assets/images/henry.jpg" alt="Picture of John Henry Weber">
 
-        <div class="word-content">
-          <h2>My Name is John Henry Weber.</h2>
-            <h2>I am a gemini, enjoy long walks on the beach, and can code one hell of a website.</h2>
-            <h2>Be sure to check out my portfolio to see some of the work you or your company would be in store for if
-              you
-              secure my services.</h2>
-            <h2>Drop me a line by clicking on the contact tab. I hope to hear from you soon!</h2>
+            <div class="word-content">
+                <h2>My Name is John Henry Weber.</h2>
+                <h2>I am a gemini, enjoy long walks on the beach, and can code one hell of a website.</h2>
+                <h2>Be sure to check out my portfolio to see some of the work you or your company would be in store for
+                    if
+                    you
+                    secure my services.</h2>
+                <h2>Drop me a line by clicking on the contact tab. I hope to hear from you soon!</h2>
+            </div>
         </div>
-      </div>
     </div>
     <br />
     <br />
     <div class="footer">
-      <div class="inner-header">
-        <div class="nav">
-            &#169; John Henry Weber, 2019
+        <div class="inner-header">
+            <div class="nav">
+                &#169; John Henry Weber, 2019
+            </div>
         </div>
-    </div>
     </div>
 </body>
 
