--- a/portfolio.html
+++ b/portfolio.html
@@ -6,24 +6,41 @@
   <title>Portfolio</title>
   <link href="https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Cormorant+Infant&display=swap" rel="stylesheet">
-  <link href="assets/css/portfolio-stylesheet.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+  <link href="./assets/css/portfolio.css" rel="stylesheet">
   <link rel="icon" href="assets/images/rocketship.ico">
 </head>
-<body>
-    <div class="main-container">
 
+<body>
+  <div class="main-container">
+    <header class="inner-header">
+      <div class="name">
+        <h3 id="page-title"><b>John Henry Weber</b></h3>
+      </div>
+      <div class="nav">
+        <h3><b><a href="./index.html">About</a> | <a href="./portfolio.html">Portfolio</a> | <a
+            href="./contact.html">Contact</a></b></h3>
+      </div>
+    </header>
+  </div>
+
+    <div class="header"></div>
+  <div class="main-container">
+
+  <div id="projectContents"></div>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="./assets/javascript/siteLogic.js"></script>
+
+  </div>
+  <br />
+  <br />
+  <div class="footer">
       <div class="inner-header">
-        <div class="name">
-          <h2>John Henry Weber</h2>
-        </div>
-        <div class="nav">
-          <h2><a href="index.html">About</a> | <a href="portfolio.html">Portfolio</a> | <a
-              href="contact.html">Contact</a></h2>
-        </div>
-        <body>
-            <div id="projectContents"></div>
-            <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-            <script src="./siteLogic.js"></script>
-          </body>
-          
-          </html>
+          <div class="nav">
+              &#169; John Henry Weber, 2019
+          </div>
+      </div>
+  </div>
+</body>
+
+</html>
