Commit without Mobile

--- a/contact.html
+++ b/contact.html
@@ -28,11 +28,16 @@
   <div class="main-container">
   <div id="contact">
     <h3><b>Linked In:</b></h3>
-    <a href="addressOfLinkedIn"><img src="./assets/images/linkedin.png" id="linkedinLogo"></a>
+    <a href="https://www.linkedin.com/in/john-henry-weber-70773818a/"><img src="./assets/images/linkedin.png" id="linkedinLogo"></a>
+    <br />
+    <br />
     <h3><b>GitHub:</b></h3>
-    <a href="addressOfLinkedIn"><img src="./assets/images/octocat.png" id="githubLogo"></a>
+    <a href="https://github.com/magicalrobotunicorn"><img src="./assets/images/octocat.png" id="githubLogo"></a>
+    <br />
+    <br />
     <h3><b>Email Me:</b></h3>
     <p><h3><a href="mailto:johnhenryweber@gmail.com?Subject=John%20Henry%20Weber:%20Web%20Developer" target="_top">johnhenryweber@gmail.com</a></p>
+    <br />
     <h3><b>Call Me:</b></h3>
     <p><h3><a href="tel:1-541-359-5362">541-359-5362</a></p>
   </div>
