--- a/index.html
+++ b/index.html
@@ -37,7 +37,19 @@
                     if
                     you
                     secure my services.</h2>
-                <h2>Drop me a line by clicking on the contact tab. I hope to hear from you soon!</h2>
+                    <br />
+                    <div class="gallery linkedinGallery">
+                        <a href="https://www.linkedin.com/in/john-henry-weber-70773818a/" id="linkedinLink">
+                            <img src="./assets/images/linkedin.png" class="linkedinImage">
+                        </a>
+                    </div>
+                    <div class="gallery githubGallery">
+                            <a href="https://github.com/magicalrobotunicorn" id="githubLink">
+                                <img src="./assets/images/octocat.png" class="octocatImage">
+                            </a>
+                    </div>
+                    <br />
+                    <br />
             </div>
         </div>
     </div>
